--- a/index.html
+++ b/index.html
@@ -48,37 +48,37 @@
           <div class="graph--range">
             <div class="col">
               <span class="popup hidden"></span>
-              <span class="bar"></span>
+              <span class="column"></span>
               <span class="day subheading"></span>
             </div>
             <div class="col">
               <span class="popup hidden"></span>
-              <span class="bar"></span>
+              <span class="column"></span>
               <span class="day subheading"></span>
             </div>
             <div class="col">
               <span class="popup hidden"></span>
-              <span class="bar"></span>
+              <span class="column"></span>
               <span class="day subheading"></span>
             </div>
             <div class="col">
               <span class="popup hidden"></span>
-              <span class="bar"></span>
+              <span class="column"></span>
               <span class="day subheading"></span>
             </div>
             <div class="col">
               <span class="popup hidden"></span>
-              <span class="bar"></span>
+              <span class="column"></span>
               <span class="day subheading"></span>
             </div>
             <div class="col">
               <span class="popup hidden"></span>
-              <span class="bar"></span>
+              <span class="column"></span>
               <span class="day subheading"></span>
             </div>
             <div class="col">
               <span class="popup hidden"></span>
-              <span class="bar"></span>
+              <span class="column"></span>
               <span class="day subheading"></span>
             </div>
           </div>
